--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "anchor-js": "^4.2.2",
-    "identity-style-guide": "^2.2.1",
-    "simple-jekyll-search": "^1.7.7"
+    "identity-style-guide": "^2.2.1"
   }
 }
